{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 175,
  "lineage": "8f42a590-6b72-122e-9250-59d9262cb9cb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb_ip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0ec84536b8aa6987c",
            "public_dns": "ec2-3-219-156-51.compute-1.amazonaws.com",
            "public_ip": "3.219.156.51",
            "public_ipv4_pool": "amazon",
            "tags": {
              "App": "Boiler",
              "Name": "LB_IP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_ip_A",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0e5b608ba4f76d531",
            "domain": "vpc",
            "id": "eipalloc-0bfa57616257d2c12",
            "network_interface": "eni-0b50b2ebace1d771c",
            "private_dns": "ip-10-0-3-200.ec2.internal",
            "private_ip": "10.0.3.200",
            "public_dns": "ec2-54-144-133-227.compute-1.amazonaws.com",
            "public_ip": "54.144.133.227",
            "public_ipv4_pool": "amazon",
            "tags": {
              "App": "Boiler",
              "Name": "NAT_Gateway_A_IP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_ip_B",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0bd6f7e12c1edc77a",
            "domain": "vpc",
            "id": "eipalloc-0898f2dc64e12a912",
            "network_interface": "eni-003d9b96884a7b1b7",
            "private_dns": "ip-10-0-4-74.ec2.internal",
            "private_ip": "10.0.4.74",
            "public_dns": "ec2-3-233-177-89.compute-1.amazonaws.com",
            "public_ip": "3.233.177.89",
            "public_ipv4_pool": "amazon",
            "tags": {
              "App": "Boiler",
              "Name": "NAT_Gateway_B_IP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:275024362756:internet-gateway/igw-0adc3388608e47e1d",
            "id": "igw-0adc3388608e47e1d",
            "owner_id": "275024362756",
            "tags": {
              "App": "Boiler",
              "Name": "Internet Gateway"
            },
            "vpc_id": "vpc-0545a993b6e115155"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_lb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:275024362756:loadbalancer/app/Books-Load-Balancer/e6144edfe2b1a481",
            "arn_suffix": "app/Books-Load-Balancer/e6144edfe2b1a481",
            "dns_name": "Books-Load-Balancer-1181657762.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:275024362756:loadbalancer/app/Books-Load-Balancer/e6144edfe2b1a481",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Books-Load-Balancer",
            "security_groups": [
              "sg-0f5e0681d5203257d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-066f946beb9642e57"
              },
              {
                "subnet_id": "subnet-0f9303127c6a20433"
              }
            ],
            "subnets": [
              "subnet-066f946beb9642e57",
              "subnet-0f9303127c6a20433"
            ],
            "tags": {
              "App": "Boiler",
              "Name": "Books_load_balancer"
            },
            "vpc_id": "vpc-0545a993b6e115155",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_subnet.public_A",
            "aws_subnet.public_B",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_A",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bfa57616257d2c12",
            "id": "nat-031c375ba6fdd3a2c",
            "network_interface_id": "eni-0b50b2ebace1d771c",
            "private_ip": "10.0.3.200",
            "public_ip": "54.144.133.227",
            "subnet_id": "subnet-0c989e9b99f7312df",
            "tags": {
              "App": "Boiler",
              "Name": "NAT_Gateway_A"
            }
          },
          "dependencies": [
            "aws_eip.nat_ip_A",
            "aws_subnet.private_A",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_B",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0898f2dc64e12a912",
            "id": "nat-0d436b90b7195d7e2",
            "network_interface_id": "eni-003d9b96884a7b1b7",
            "private_ip": "10.0.4.74",
            "public_ip": "3.233.177.89",
            "subnet_id": "subnet-0788a635bc488e9d7",
            "tags": {
              "App": "Boiler",
              "Name": "NAT_Gateway_B"
            }
          },
          "dependencies": [
            "aws_eip.nat_ip_B",
            "aws_subnet.private_B",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_gateway_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0adc3388608e47e1d",
            "id": "r-rtb-0aa53caabd6128ce51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0aa53caabd6128ce5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route_A",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03f73531492f93cf71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d436b90b7195d7e2",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03f73531492f93cf7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat_ip_B",
            "aws_nat_gateway.nat_B",
            "aws_route_table.private_b",
            "aws_subnet.private_B",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route_B",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08f24f612368445211080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-031c375ba6fdd3a2c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08f24f61236844521",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat_ip_A",
            "aws_nat_gateway.nat_A",
            "aws_route_table.private_a",
            "aws_subnet.private_A",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-08f24f61236844521",
            "owner_id": "275024362756",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-031c375ba6fdd3a2c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "App": "Boiler",
              "Name": "Private_Route_Table_A"
            },
            "vpc_id": "vpc-0545a993b6e115155"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03f73531492f93cf7",
            "owner_id": "275024362756",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d436b90b7195d7e2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "App": "Boiler",
              "Name": "Private_Route_Table_B"
            },
            "vpc_id": "vpc-0545a993b6e115155"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0aa53caabd6128ce5",
            "owner_id": "275024362756",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0adc3388608e47e1d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "App": "Boiler",
              "Name": "Private_Route_Table_A"
            },
            "vpc_id": "vpc-0545a993b6e115155"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-079c521503a948c05",
            "route_table_id": "rtb-0aa53caabd6128ce5",
            "subnet_id": "subnet-0f9303127c6a20433"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_A",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-065740a2a0281a37b",
            "route_table_id": "rtb-0aa53caabd6128ce5",
            "subnet_id": "subnet-066f946beb9642e57"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_B",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04908ee3c590593c2",
            "route_table_id": "rtb-08f24f61236844521",
            "subnet_id": "subnet-0c989e9b99f7312df"
          },
          "dependencies": [
            "aws_route_table.private_a",
            "aws_subnet.private_A",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04908ee3c590593c2",
            "route_table_id": "rtb-08f24f61236844521",
            "subnet_id": "subnet-0c989e9b99f7312df"
          },
          "dependencies": [
            "aws_route_table.private_a",
            "aws_subnet.private_A",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_A",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:275024362756:subnet/subnet-0c989e9b99f7312df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0c989e9b99f7312df",
            "map_public_ip_on_launch": false,
            "owner_id": "275024362756",
            "tags": {
              "App": "Boiler",
              "Name": "private_A"
            },
            "vpc_id": "vpc-0545a993b6e115155"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_B",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:275024362756:subnet/subnet-0788a635bc488e9d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0788a635bc488e9d7",
            "map_public_ip_on_launch": false,
            "owner_id": "275024362756",
            "tags": {
              "App": "Boiler",
              "Name": "private_B"
            },
            "vpc_id": "vpc-0545a993b6e115155"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_A",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:275024362756:subnet/subnet-0f9303127c6a20433",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0f9303127c6a20433",
            "map_public_ip_on_launch": false,
            "owner_id": "275024362756",
            "tags": {
              "App": "Boiler",
              "Name": "public_A"
            },
            "vpc_id": "vpc-0545a993b6e115155"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_B",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:275024362756:subnet/subnet-066f946beb9642e57",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-066f946beb9642e57",
            "map_public_ip_on_launch": false,
            "owner_id": "275024362756",
            "tags": {
              "App": "Boiler",
              "Name": "public_B"
            },
            "vpc_id": "vpc-0545a993b6e115155"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:275024362756:vpc/vpc-0545a993b6e115155",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0637eae102390ca47",
            "default_route_table_id": "rtb-0ce43042d57898770",
            "default_security_group_id": "sg-0f5e0681d5203257d",
            "dhcp_options_id": "dopt-047b5f32c2a7e449c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0545a993b6e115155",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ce43042d57898770",
            "owner_id": "275024362756",
            "tags": {
              "App": "Boiler",
              "Name": "Boiler-VPC"
            }
          }
        }
      ]
    }
  ]
}